modified the swagger
